samples/_failures_safe/1761509246_bdb610_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7bf1455f.c: In function ‘get_determinant’:
./samples/SAFE/__tmp_7bf1455f.c:139:5: error: expected expression at end of input
  139 |     if (size == 3)
      |     ^~
./samples/SAFE/__tmp_7bf1455f.c:139:5: error: expected declaration or statement at end of input
